--- a/src/book.adoc
+++ b/src/book.adoc
@@ -10,12 +10,14 @@ Michiel Borkent
 :toc-collapsable:
 :sectlinks:
 :attribute-missing: warn
+:favicon:
 // user attributes
 :badge-target-url: https://book.babashka.org#badges
 :badge-compatible-img-url: https://raw.githubusercontent.com/babashka/babashka/master/logo/badge.svg
 :badge-built-in-img-url: https://raw.githubusercontent.com/babashka/babashka/master/logo/built-in-badge.svg
 :badge-compatible: link:#badges[image:{badge-compatible-img-url}[bb compatible]]
 :badge-built-in: link:#badges[image:{badge-built-in-img-url}[bb built-in]]
+=======
 
 ++++
 <!--<script>alert('hello')</script>-->
