Add favicon.ico (#80)
* Add favicon.ico

I created source image `logo/favicon.svg` from babashka's `logo/icon.svg`.
It is the same svg but squared and with padding removed.

`src/favicon.ico` was generated from `logo/favicon.svg` via
`script/favicon.clj`. You may never need to run this, but it documents
how `favicon.ico` was generated and is there should you need it.

Note: Most modern browsers do recognize .svg icons, but I thought it best
to remain conservative and stick with the .ico format.

Closes #78

* review feedback: turf remnant for merge conflict

--- a/src/book.adoc
+++ b/src/book.adoc
@@ -10,6 +10,7 @@ Michiel Borkent
 :toc-collapsable:
 :sectlinks:
 :attribute-missing: warn
+:favicon:
 // user attributes
 :badge-target-url: https://book.babashka.org#badges
 :badge-compatible-img-url: https://raw.githubusercontent.com/babashka/babashka/master/logo/badge.svg
